<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

  <LinearLayout
    android:id="@+id/add_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <EditText
      android:id="@+id/insert_page_index"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:inputType="numberDecimal"/>

    <Button
      android:id="@+id/insert_page_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/insert_page_button"/>
  </LinearLayout>

  <LinearLayout
    android:id="@+id/remove_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/add_container"
    android:orientation="horizontal">

    <EditText
      android:id="@+id/remove_page_index"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:inputType="numberDecimal"/>

    <Button
      android:id="@+id/remove_page_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/remove_page_button"/>
  </LinearLayout>

  <LinearLayout
      android:id="@+id/goto_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/remove_container"
      android:orientation="horizontal">

    <EditText
        android:id="@+id/goto_page_index"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/goto_page_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goto_page_button"/>
  </LinearLayout>

  <LinearLayout
      android:id="@+id/reset_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/goto_container"
      android:orientation="horizontal">

    <EditText
        android:id="@+id/reset_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"/>
  </LinearLayout>

  <LinearLayout
      android:id="@+id/offscreen_page_limit_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/reset_container"
      android:orientation="horizontal">

    <EditText
        android:id="@+id/offscreen_page_limit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/offscreen_page_limit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offscreen_page_limit_button"/>
  </LinearLayout>

  <TextView
    android:id="@+id/current_page"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/offscreen_page_limit_container"
    tools:text="@string/current_page_indicator"/>

  <com.isapp.android.circularviewpager.CircularViewPager
    android:id="@+id/circular_view_pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_below="@+id/current_page"/>

</RelativeLayout>
